objects/PageTemplate__c.object
<CustomObject>
    <fields>
        <fullName>ContentBlockNames__c</fullName>
        <description>This field contains the names of the content block tags defined in the template.</description>
        <label>ContentBlockNames</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>CMSFolder__c</referenceTo>
        <relationshipLabel>PageTemplates</relationshipLabel>
        <relationshipName>PageTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualForce_Page_Name__c</fullName>
        <label>VisualForce Page Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PageTemplate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PageTemplate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PageTemplates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PageTemplate_folder_can_not_be_empty</fullName>
        <active>true</active>
        <description>A page template needs to have a parent Folder.</description>
        <errorConditionFormula>ISBLANK(Folder__c)</errorConditionFormula>
        <errorDisplayField>Folder__c</errorDisplayField>
        <errorMessage>A page template needs to have a parent Folder.</errorMessage>
    </validationRules>
</CustomObject>